contrast fix

--- a/style.css
+++ b/style.css
@@ -759,6 +759,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.dark {
+    color: #424242;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
 }
